--- a/blogpost.html
+++ b/blogpost.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <title>Bienvenido a hyperblog 2.0</title>
-            <link rel="stylesheet" href="css/estilos.css">
+        <link rel="stylesheet" href="css/estilos.css">
     </head>
     <body>
         <div id="container">
@@ -13,6 +13,9 @@
                 <p>Y este es el parrafo dde inicio donde vamos a explicar las cosas increéibles que se pueden hacer con ramas</p>
                 <p>Los blogs son la mejor forma de compartir información y tus ideas. Mucho más que ir a conferencias o salir en Youtube. Excepto si eres un rockstar. Pero estadísticamente no lo eres.... por aho9ra.</p>
                 <p>Suscribete y dale like</p>
+                <div id="footer">
+                    Hecho con amor en Platzi &lt;3
+                </div>
             </div>
         </div>
     </body>
